--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -8,7 +8,7 @@ body {
   }
   h1 {
     font-variant: small-caps;
-    font-family: Cursive;
+    font-family: Tahoma, Verdan, sans-serif;
     color: #8E24AA;
     text-align: center;
   }
@@ -26,7 +26,7 @@ body {
   }
   li {
     display: inline-block;
-    width: 30%;
+    width: 50%;
   }
   p {
     line-height: 150%;
